--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.9",
+    "expo": "^46.0.10",
     "expo-status-bar": "~1.4.0",
+    "metro-core": "^0.72.2",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-elements": "^3.4.2",
+    "react-native-navigation": "^7.30.0-alpha.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "metro-config": "^0.72.2"
   },
   "private": true
 }
