--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "^46.0.10",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.9.4",
     "metro-core": "^0.72.2",
     "react": "18.0.0",
     "react-native": "0.69.5",
