--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.9",
+    "cli": "^1.0.1",
+    "expo": "^46.0.10",
     "expo-status-bar": "~1.4.0",
+    "metro-core": "^0.72.2",
     "react": "18.0.0",
     "react-native": "0.69.5"
   },
