--- a/package.json
+++ b/package.json
@@ -9,18 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^46.0.10",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/cli-debugger-ui": "^9.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "6.4.0",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.2",
+    "android": "^0.0.8",
+    "axios": "^1.1.3",
+    "deprecated-react-native-prop-types": "^2.3.0",
+    "expo": "^46.0.16",
+    "expo-app-loading": "^2.1.0",
+    "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
-    "firebase": "^9.9.4",
-    "metro-core": "^0.72.2",
+    "firebase": "^9.13.0",
+    "metro-core": "^0.73.3",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-android": "3.0.0",
     "react-native-elements": "^3.4.2",
-    "react-native-navigation": "^7.30.0-alpha.1"
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-navigation": "^7.29.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "metro-config": "^0.72.2"
+    "metro-config": "^0.73.3"
   },
-  "private": true
+  "private": true,
+  "projectConfig": {
+    "apiKey": "7656a9180803942a8c3a574d0fd11a83"
+  }
 }
